web socket location spoof, missing ownership checks, overly perm CORS policy and n+1 query prob